--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,18 +11,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/constraintLogin"
         android:background="@drawable/fondo"
         android:orientation="vertical"
         tools:context=".Login">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="342dp"
+            android:layout_height="670dp"
             android:layout_gravity="center"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="24dp"
             android:backgroundTint="#66FFFFFF"
             app:cardCornerRadius="50dp"
@@ -35,7 +36,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/main"
-                android:layout_width="368dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <ImageView
@@ -52,14 +53,17 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+
                 <ImageView
                     android:id="@+id/loginLogo"
                     android:layout_width="195dp"
                     android:layout_height="166dp"
+                    android:layout_marginStart="100dp"
                     android:layout_marginTop="36dp"
+                    android:layout_marginEnd="100dp"
                     android:src="@drawable/logo"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.502"
+                    app:layout_constraintHorizontal_bias="0.49"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,9 +71,9 @@
                     android:id="@+id/btRegistrarse"
                     android:layout_width="200dp"
                     android:layout_height="60dp"
-                    android:layout_marginStart="84dp"
+                    android:layout_marginStart="71dp"
                     android:layout_marginTop="24dp"
-                    android:layout_marginEnd="84dp"
+                    android:layout_marginEnd="71dp"
                     android:layout_marginBottom="79dp"
                     android:backgroundTint="#7B5BF2"
                     android:fontFamily="@font/allproyectfont"
@@ -80,19 +84,17 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btInciarSesion"
                     app:layout_constraintVertical_bias="0.0" />
-
 
                 <Button
                     android:id="@+id/btInciarSesion"
                     android:layout_width="200dp"
                     android:layout_height="60dp"
-                    android:layout_marginStart="84dp"
-                    android:layout_marginTop="9dp"
-                    android:layout_marginEnd="84dp"
+                    android:layout_marginStart="71dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="71dp"
                     android:backgroundTint="#7B5BF2"
                     android:fontFamily="@font/allproyectfont"
                     android:text="@string/iniciar_sesion"
@@ -101,7 +103,6 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/checkboxRecordarEmail" />
 
@@ -110,13 +111,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="148dp"
-                    android:layout_marginTop="11dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="86dp"
                     android:fontFamily="@font/allproyectfont"
                     android:text="Recordar email"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/loginEtContrasenha" />
 
@@ -124,9 +126,9 @@
                     android:id="@+id/loginEtContrasenha"
                     android:layout_width="200dp"
                     android:layout_height="48dp"
-                    android:layout_marginStart="106dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="106dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="70dp"
                     android:autofillHints="password"
                     android:background="@drawable/edittextesqredond"
                     android:fontFamily="@font/allproyectfont"
@@ -137,7 +139,6 @@
                     android:textColorHint="#e3e1e1"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.477"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/loginEtEmail" />
 
@@ -145,15 +146,14 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="106dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginEnd="107dp"
+                    android:layout_marginStart="93dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="94dp"
                     android:fontFamily="@font/raillinc"
                     android:text="ClothesVault"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/loginLogo" />
 
@@ -161,9 +161,9 @@
                     android:id="@+id/loginEtEmail"
                     android:layout_width="200dp"
                     android:layout_height="48dp"
-                    android:layout_marginStart="105dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="106dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginEnd="70dp"
                     android:autofillHints="username"
                     android:background="@drawable/edittextesqredond"
                     android:fontFamily="@font/allproyectfont"
@@ -174,7 +174,6 @@
                     android:textColorHint="#e3e1e1"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.465"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView" />
 
