--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="#EDF2FA"
-    >
+    android:fitsSystemWindows="true">
 
     <!-- Toolbar con iconos -->
     <androidx.appcompat.widget.Toolbar
@@ -44,8 +43,8 @@
                     android:id="@+id/icon2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="26dp"
                     android:layout_marginLeft="12dp"
+                    android:layout_marginRight="26dp"
                     android:src="@drawable/usuario" />
             </LinearLayout>
         </RelativeLayout>
@@ -57,10 +56,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/allproyectfont"
         android:text="!HOLA, ¡"
-        android:textSize="42dp"
         android:textColor="#000000"
-        android:layout_marginTop="10dp" />
+        android:textSize="42dp"
+        android:textStyle="bold" />
 
     <!-- RecyclerView para el catálogo -->
     <androidx.recyclerview.widget.RecyclerView
