--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -118,22 +118,6 @@
             app:layout_constraintTop_toBottomOf="@+id/registerApelldio1" />
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="335dp"
-            android:fontFamily="@font/allproyectfont"
-            android:text="@string/registerEmail"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registerApelldio2" />
-
-        <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -186,9 +170,9 @@
             android:id="@+id/registerNombre"
             android:layout_width="350dp"
             android:layout_height="48dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:autofillHints="text"
             android:background="@drawable/edittextesqredond"
             android:fontFamily="@font/allproyectfont"
@@ -225,9 +209,9 @@
             android:id="@+id/registerApelldio2"
             android:layout_width="350dp"
             android:layout_height="48dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:autofillHints="text"
             android:background="@drawable/edittextesqredond"
             android:fontFamily="@font/allproyectfont"
@@ -245,10 +229,9 @@
             android:id="@+id/registerEmail"
             android:layout_width="350dp"
             android:layout_height="48dp"
-
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:autofillHints="text"
             android:background="@drawable/edittextesqredond"
             android:fontFamily="@font/allproyectfont"
@@ -260,15 +243,15 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
         <EditText
             android:id="@+id/registerContrasenha"
             android:layout_width="350dp"
             android:layout_height="48dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:autofillHints="text"
             android:background="@drawable/edittextesqredond"
             android:fontFamily="@font/allproyectfont"
@@ -287,9 +270,9 @@
             android:layout_width="350dp"
             android:layout_height="48dp"
 
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:autofillHints="text"
             android:background="@drawable/edittextesqredond"
             android:fontFamily="@font/allproyectfont"
@@ -308,9 +291,9 @@
             android:layout_width="350dp"
             android:layout_height="48dp"
 
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:autofillHints="text"
             android:background="@drawable/edittextesqredond"
             android:fontFamily="@font/allproyectfont"
@@ -328,9 +311,9 @@
             android:id="@+id/registerApelldio1"
             android:layout_width="350dp"
             android:layout_height="48dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:autofillHints="text"
             android:background="@drawable/edittextesqredond"
             android:fontFamily="@font/allproyectfont"
@@ -343,6 +326,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="335dp"
+            android:fontFamily="@font/allproyectfont"
+            android:text="Email"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/registerApelldio2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
