--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -1,15 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp"
     android:fitsSystemWindows="true"
-    >
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/productoImagen"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:scaleType="centerCrop"
         android:src="@drawable/imagen_test" />
 
@@ -17,11 +16,12 @@
         android:id="@+id/productoNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nombre del producto"
-        android:textSize="16sp"
-        android:textStyle="bold"
         android:paddingTop="4dp"
-        android:paddingBottom="2dp" />
+        android:paddingBottom="2dp"
+        android:text="Nombre del producto"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,16 +33,22 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/allproyectfont"
             android:text="€ 0.00"
-            android:textSize="14sp" />
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/productoTalla"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/allproyectfont"
+            android:paddingStart="8dp"
             android:text="Talla"
+            android:textColor="@color/black"
             android:textSize="14sp"
-            android:paddingStart="8dp" />
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
