--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorFondo">#EB09184D</color>
-    <color name="colorContenedor">#FFFFFF</color>
+    <color name="colorToolbar">#80000000</color>
 
 </resources>
